# W-DUGS-NBody-Sim

./: .gitignore  20k data points  CMakeLists.txt  README.md  animation.py  benchmark.csv  benchmark_bh.csv  nbody_sim  simulation.csv  simulation_100k.csv  simulation_10k.csv
include/: body.hpp  kdtree.hpp  physics.hpp  quadtree.hpp  simulation.hpp
src/: body.cpp  kdtree.cpp  main.cpp  physics.cpp  quadtree.cpp  simulation.cpp
test/: test.cpp
